fixed when screen was too narrow couldn't see left
the content on the left would go off-screen without you being able to scroll there.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@ a {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
+  min-width: 100%;
   min-height: 100%;
   display: flex;
   place-items: center;
